- correct displaying of manchester value - added some brackets and VocabFilter